<resources>
    <string name="app_name">Bof2FA</string>
    <string name="title_authenticators">Authenticators</string>
    <string name="title_settings">Einstellungen</string>

    <string name="settings_import_codes">IMPORT CODES</string>
    <string name="settings_export_codes">EXPORT CODES</string>
    <string name="settings_info">
        Hier können Konten exportiert und importiert werden.
        Das Format ist nur mit OTPAndroid kompatibel.
    </string>

    <string name="widget_info">
        Zum Aktualisieren klicken
    </string>
    <string name="widget_description">
        Anzeige für 2FA-Codes
    </string>

    <string name="authenticators_show_codes">Codes anzeigen/verstecken</string>
    <string name="authenticators_add_code">Konto hinzufügen</string>

    <string name="qr_scan">Manuell eingeben</string>
    <string name="code_create_issuer">Issuer</string>
    <string name="code_create_save">Speichern</string>
    <string name="code_create_account">Account</string>
    <string name="code_create_secret">Secret</string>
    <string name="code_create_issuer_tooltip">Der Anbieter des Kontos, z.B. Amazon, Google, …</string>
    <string name="code_create_account_tooltip">Ein eindeutiger Identifizierer/Name des Kontos, z.B. test@gmail.com
    </string>
    <string name="code_create_secret_tooltip">Der geheime Schlüssel, welcher von Ihrem Kontoanbieter gegeben wird.
    </string>

    <string name="code_detail_delete">Konto löschen</string>
    <string name="code_detail_edit">Konto bearbeiten</string>
    <string name="code_detail_code_info">CODE FÜR EINMALPASSWORT</string>
    <string name="not_available">Nicht verfügbar</string>
    <string name="cancel">Abbrechen</string>

    <string name="widget_id_store_name">app_widget_store</string>
</resources>