<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".ui.settings.SettingsFragment">
    <Button
            android:text="@string/settings_import_codes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/importCodesBtn"
            app:layout_constraintStart_toStartOf="@+id/infoText"
            app:layout_constraintTop_toBottomOf="@+id/infoText" android:layout_marginTop="24dp"
            android:textColor="@color/purple_200" style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>
    <Button
            android:text="@string/settings_export_codes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/exportCodesBtn"
            app:layout_constraintStart_toStartOf="@+id/importCodesBtn"
            app:layout_constraintTop_toBottomOf="@+id/importCodesBtn" android:layout_marginTop="24dp"
            android:textColor="@color/purple_200" style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>
    <View
            android:id="@+id/divider"
            android:layout_width="wrap_content"
            android:layout_height="2dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="32dp" android:layout_marginStart="32dp"
            app:layout_constraintTop_toBottomOf="@+id/exportCodesBtn" android:layout_marginTop="32dp"/>
    <TextView
            android:text="@string/settings_info"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/infoText"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:textColor="@color/white" android:layout_marginTop="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="24dp" android:layout_marginEnd="24dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>